--- a/style.css
+++ b/style.css
@@ -3,28 +3,61 @@ body{
     color: #777;
     background: #777;
     width: 960px;
-    font-size: '18px'
+    font-size: 18px;
+    margin: auto
 }
 
 header{
-    background: #ebebeb
+    background: #ebebeb;
+    text-align: center;
+    padding: 50px;
+    margin: 10px
 }
 
 nav{
-    background: #ebebeb
+    background: #ebebeb;
+    text-align: center;
+    padding: 50px;
+    margin: 10px;
+
+}
+
+section{
+    background: #ebebeb;
+    float: left;
+    height: 200px;
+    padding: 50px;
+    text-align: center;
+    width: 40%;
+    margin: 10px;
 }
 
 aside{
-    background: #ebebeb
+    background: #ebebeb;
+    text-align: center;
+    float: right;
+    height: 200px;
+    padding: 50px;
+    width: 35%;
+    margin: 10px;
+    
 }
 
 footer{
-    background: #ebebeb
+    background: #ebebeb;
+    text-align: center;
+    padding: 50px;
+    margin: 10px;
+    clear: both;
 }
 
 article{
     color: #ebebeb;
-    background: #777
+    background: #777;
+    text-align: center;
+    overflow: auto;
+    height: 100px;
+    width: 400px
 }
 
 h1{
@@ -32,7 +65,20 @@ h1{
     background: #ebebeb
 }
 
-p{
+h2{
+    color: #777;
+    background: #ebebeb;
+    margin: 5px
+}
+
+h3{
     color: #777;
     background: #ebebeb
+}
+
+p{
+    color: #777;
+    background: #ebebeb;
+    margin: 5px;
+    padding: 5px
 }
